# TEZ-1200

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  configurator-build.yml  firmware-build.yml
configurator/: README.md  package-lock.json  package.json
configurator/src/: index.ts  presets.ts  serial.ts  wavetables.ts
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CONTROL_THEORY.md  USER_MANUAL.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs  main.rs
firmware/src/foc/: controller.rs  encoder.rs  mod.rs  motor_driver.rs
firmware/src/output/: dac.rs  midi.rs  mod.rs  quantization.rs
firmware/src/state/: mod.rs  modes.rs  presets.rs
firmware/src/sync/: clock.rs  cv_follower.rs  mod.rs
firmware/src/ui/: display.rs  input.rs  mod.rs
hardware/mechanical/: README.md
hardware/panel/: README.md
hardware/pcb/: README.md
